##################################################
 Revision history for Log::Log4perl
##################################################

1.12 (not yet released)
    *   (ms) Added Log::Log4perl::Resurrector to resurrect commented-out
             Log4perl statements in all subsequently loaded modules.

1.11 (2007/05/29)
    *   (ms) Added PatternLayout::Multiline code by Cory Bennett to 
             render multiline messages.
    *   (ms) Added log level TRACE (lets through even more messages
             than DEBUG) (suggested by Craig).
    *   (ms) Added 'syswrite' flag to file appender to have it use
             'syswrite' instead of 'print', avoiding buffered or
             interleaving messages originating from different processes
             (thanks to Evan Miller).

1.10 (2007/03/27)
    *   (kg) Nikita Dedik pointed out that Saturday is missing from 
             @Log::Log4perl::DateFormat::WEEK_DAYS
    *   (ms) Scott Cline noticed a potential problem with the DBI
             appender reconnection logic in 'buffered' mode. Applied
             a patch.
    *   (ms) Changed DBI reconnect logic to perform even if the DB
             is pingable again.
    *   (ms) Applied code by Valerio Valdez Paolini with modifications
             to PropertyConfigurator.pm to allow pulling values from
             the property configurator by path.

1.09 (2007/02/07)
    *   (ms) Added $^S check to FAQ, as suggested by J. David Blackstone.
    *   (ms) Applied Robert Jacobson's patch for the "DDD" formatter
             in L4p::DateFormats, which now formats the day-of-year values
             numerically and precedes them with zeroes if necessary.
    *   (ms) Added %M{x} PatternLayout notation as requested by
             Ankur Gupta.
    *   (ms) Another Win32 test suite fix, no longer deleting an open
             file but moving it aside (rt.cpan:23520).

1.08 2006/11/18
    *   (ms) Applied test suite patch by Lars Thegler for 