@@ -5,6 +5,7 @@
 1.12 (not yet released)
     *   (ms) Added Log::Log4perl::Resurrector to resurrect commented-out
              Log4perl statements in all subsequently loaded modules.
+    *   (ms) Added ALWAYS easy mode macro (level=OFF)
 
 1.11 (2007/05/29)
     *   (ms) Added PatternLayout::Multiline code by Cory Bennett to 
